--- a/C_Square.vcxproj.filters
+++ b/C_Square.vcxproj.filters
@@ -980,6 +980,9 @@
     <ClInclude Include="src\view\VS04_1.h">
       <Filter>src\view\VElement</Filter>
     </ClInclude>
+    <ClInclude Include="src\view\VS06_1.h">
+      <Filter>src\view\VElement</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
