--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -450,6 +450,8 @@
     <ClInclude Include="src\view\VS04_1.h" />
     <ClInclude Include="src\view\VS06_1.h" />
     <ClInclude Include="src\view\VS07_1.h" />
+    <ClInclude Include="src\view\VS08_1.h" />
+    <ClInclude Include="src\view\VS08_2.h" />
     <ClInclude Include="src\view\VSTest01.h" />
     <ClInclude Include="src\view\VSTest02.h" />
   </ItemGroup>
