--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -449,6 +449,7 @@
     <ClInclude Include="src\view\view.h" />
     <ClInclude Include="src\view\VS01_1.h" />
     <ClInclude Include="src\view\VS02_1.h" />
+    <ClInclude Include="src\view\VS10_1.h" />
     <ClInclude Include="src\view\VS04_1.h" />
     <ClInclude Include="src\view\VS06_1.h" />
     <ClInclude Include="src\view\VS07_1.h" />
