--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -200,6 +200,7 @@
     <ClCompile Include="src\camCtrl.cpp" />
     <ClCompile Include="src\camUnit.cpp" />
     <ClCompile Include="src\ctrlMap.cpp" />
+    <ClCompile Include="src\draw\DAudioRect.cpp" />
     <ClCompile Include="src\draw\DAudioSphere.cpp" />
     <ClCompile Include="src\draw\DAudioMesh.cpp" />
     <ClCompile Include="src\draw\DCircleLine.cpp" />
@@ -329,6 +330,7 @@
     <ClInclude Include="src\camCtrl.h" />
     <ClInclude Include="src\camUnit.h" />
     <ClInclude Include="src\ctrlMap.h" />
+    <ClInclude Include="src\draw\DAudioRect.h" />
     <ClInclude Include="src\draw\DAudioSphere.h" />
     <ClInclude Include="src\draw\DAudioMesh.h" />
     <ClInclude Include="src\draw\DCircleLine.h" />
@@ -449,6 +451,8 @@
     <ClInclude Include="src\view\view.h" />
     <ClInclude Include="src\view\VS01_1.h" />
     <ClInclude Include="src\view\VS02_1.h" />
+    <ClInclude Include="src\view\VS09_1.h" />
+    <ClInclude Include="src\view\VS09_2.h" />
     <ClInclude Include="src\view\VS10_1.h" />
     <ClInclude Include="src\view\VS04_1.h" />
     <ClInclude Include="src\view\VS06_1.h" />
