--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -456,6 +456,7 @@
     <ClInclude Include="src\view\view.h" />
     <ClInclude Include="src\view\VS01_1.h" />
     <ClInclude Include="src\view\VS02_1.h" />
+    <ClInclude Include="src\view\VS03_1.h" />
     <ClInclude Include="src\view\VS05_1.h" />
     <ClInclude Include="src\view\VS05_2.h" />
     <ClInclude Include="src\view\VS09_1.h" />
@@ -466,6 +467,7 @@
     <ClInclude Include="src\view\VS07_1.h" />
     <ClInclude Include="src\view\VS08_1.h" />
     <ClInclude Include="src\view\VS08_2.h" />
+    <ClInclude Include="src\view\VS11_1.h" />
     <ClInclude Include="src\view\VSTest01.h" />
     <ClInclude Include="src\view\VSTest02.h" />
   </ItemGroup>
